--- a/src/main/resources/frontend/ERS_Angular/src/app/components/register/register.component.html
+++ b/src/main/resources/frontend/ERS_Angular/src/app/components/register/register.component.html
@@ -36,7 +36,7 @@
                           
             <!-- Email, Re-Email -->
               <label for="email">Email</label>
-              <input required type="email" name="email" class="form-control"
+              <input required type="email" name="email" class="form-control"  email="true"
                   #input      (ngModelChange)="onEmailFilled($event, input)"
                 placeholder="enter email"  [(ngModel)]="registrationForm.user.email" >
               <div *ngIf="emailAvailableMessage != '' ">
